# tb_ly

./: .gitignore  Cargo.toml  README.md
crates/client/: .gitignore  Cargo.toml
crates/client/src/: auth.rs  client.rs  client_renderer.rs  common_client.rs  main.rs  renderer.rs
crates/server/: .gitignore  Cargo.toml  generate_auth_private_key.sh  generate_cert_self_signed.rs
crates/server/src/: auth.rs  certificate.rs  common_server.rs  game.rs  main.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  game.rs  lib.rs  protocol.rs  settings.rs
crates/shared/src/game/: map.rs
crates/shared/src/protocol/: physics.rs
